# ddd-document-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: celery.py  manage.py  urls.py
config/settings/: base.py  development.py  production.py  test.py  wsgi.py
src/document/: __init__.py  apps.py  models.py
src/document/domain/: entities.py  events.py  factory.py  repository.py  services.py  value_objects.py
src/document/infrastructure/controllers/: exception_handler.py  serializers.py  urls.py  views.py
src/document/migrations/: 0001_initial.py
src/document/persistence/: mapper.py  models.py
src/document/persistence/repository/: document_repository.py
src/document/use_cases/: add_line_item.py  create_document.py  delete_document.py  find_document.py  remove_line_item.py  update_document.py
src/outbox/infrastructure/: tasks.py
tests/unit/document/domain/: test_acceptance.py  test_entities.py  test_value_objects.py
